Edited wiki page through web user interface.

--- a/wiki/CopyPastaToDo.wiki
+++ b/wiki/CopyPastaToDo.wiki
@@ -3,7 +3,7 @@
 
 = Типа туду =
 
- * виджет для выбора даты, до которой хранить копипасту (или ваще сделать селект с ограниченным выбором)
+ * настроить виджет и реакцию на удаление копипасты по истечении даты
 
 = Далёкое будущее =
 (Не будем загадывать, но всёже)
